@@ -67,12 +67,12 @@
 #
 ######################################################################
 
-# A|add_domain STATE[,STATE...]:
+# A|add_domain STATE[,STATE...][,STRIP_DEPTH]:
 # Appends a domain to the USER based on the IP address connected to in
 # given state(s).
 # (default "")
-#A servername_lookup
-#add_domain servername_lookup
+#A servername_lookup,1
+#add_domain servername_lookup,1
 
 # a|authenticate_in:
 # User is authenticated by perdition before connection to real-server.
